<resources>
    <string name="app_name">Factuwin Punto de Venta</string>
    <string name="titulo">Factuwin Punto de Venta</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="regisUsu">Registro de Usuarios </string>
    <string name="perfil">DATOS PERSONALES</string>
    <string name="productos">PRODUCTOS</string>
    <string name="agregar_prod"> Agregar Poductos</string>
    <string name="buscar_prod">Ver Poductos</string>
    <string name="datos">Nombre: </string>
    <string name="empresa">Empresa:</string>
    <string name="explorar">Archivos</string>
    <string name="importar">Configuración</string>
    <string name="desarrollador">Desarrollador</string>
    <string name="nomDev">Agustín Curiel Tapia</string>
    <string name="nomTel">(044)55-6213-0494</string>
    <string name="nomCorreo">curieltapiaagustin0112@gmail.com</string>


    <string name="title_activity_menu_principal">menuPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Configuración</string>
    <string name="action_acerca_de">Acerca de..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>