<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.omen.facpunto.acerca_de"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desarrollador"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#000000"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/foto" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomDev"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nomTel"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nomCorreo"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#000000"/>


</LinearLayout>
